Bug 148630 - IVS characters get more space if character spacing is set.
Summary: IVS characters get more space if character spacing is set.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.3.2.2 release
Hardware: All All
: medium normal
Assignee: Mark Hung
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-17 00:05 UTC by Mark Hung
Modified: 2022-06-23 10:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (16.50 KB, application/vnd.oasis.opendocument.presentation)
2022-04-17 00:28 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2022-04-17 00:05:48 UTC
Description:
When setting character spacing to 10pt, some unicode IVS ( U+4E00U+e01e1 ) get more space than it should have.

Original issue is reported:
https://github.com/ButTaiwan/bpmfvs/issues/1

The font can be downloaded here:
https://github.com/ButTaiwan/bpmfvs/releases/download/v1.320/Bpmf_Regulars.zip


Steps to Reproduce:
1. Open the document.
2. Check the text inside. The text contains two unicode IVS (U+4e00U+e01e1 in the first line, U+4e00U+e01e2 in the second line. ).


Actual Results:
Some of the character spacing is larger.

Expected Results:
All character spacing should be equal (i.e. 15pt).


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.1.3 (x64) / LibreOffice Community
Build ID: a69ca51ded25f3eefd52d7bf9a5fad8c90b87951
CPU threads: 16; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: zh-TW (zh_TW); UI: zh-TW
Calc: CL
Comment 1 Mark Hung 2022-04-17 00:28:32 UTC
Created attachment 179621 [details]
Sample document
Comment 2 Commit Notification 2022-04-20 11:08:47 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/88aeb649ed33a1a67547419f9b76c2c892dd2ee1

tdf#148630 fix text layout and cursor position for IVS+spacing

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.